[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/settings/settings.gd" type="Script" id=1]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=2]
[ext_resource path="res://menus/shared/audio_button.gd" type="Script" id=3]
[ext_resource path="res://menus/shared/audio_slider.gd" type="Script" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]
[ext_resource path="res://gomarice_goma_block.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 6 )

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Root" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Root"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.752941, 0.780392, 0.254902, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Root"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Root/CenterContainer"]
margin_left = 339.0
margin_top = 143.0
margin_right = 685.0
margin_bottom = 456.0
custom_constants/separation = 16

[node name="Master" type="HBoxContainer" parent="Root/CenterContainer/VBoxContainer"]
margin_right = 346.0
margin_bottom = 40.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="Root/CenterContainer/VBoxContainer/Master"]
margin_top = 8.0
margin_right = 202.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "Master Volume:"
align = 2

[node name="Master" type="HSlider" parent="Root/CenterContainer/VBoxContainer/Master"]
unique_name_in_owner = true
margin_left = 218.0
margin_right = 346.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 40 )
focus_neighbour_top = NodePath("../../Buttons/Back")
focus_neighbour_bottom = NodePath("../../Music/Music")
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 0.5
script = ExtResource( 4 )
audio_effect = ExtResource( 2 )
pitch = 2.25

[node name="Music" type="HBoxContainer" parent="Root/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 346.0
margin_bottom = 96.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="Root/CenterContainer/VBoxContainer/Music"]
margin_top = 8.0
margin_right = 202.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "Music Volume:"
align = 2

[node name="Music" type="HSlider" parent="Root/CenterContainer/VBoxContainer/Music"]
unique_name_in_owner = true
margin_left = 218.0
margin_right = 346.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 40 )
focus_neighbour_top = NodePath("../../Master/Master")
focus_neighbour_bottom = NodePath("../../Effects/Effects")
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 0.5
script = ExtResource( 4 )
audio_effect = ExtResource( 2 )
pitch = 2.25

[node name="Effects" type="HBoxContainer" parent="Root/CenterContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 346.0
margin_bottom = 152.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="Root/CenterContainer/VBoxContainer/Effects"]
margin_top = 8.0
margin_right = 202.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "Effects Volume:"
align = 2

[node name="Effects" type="HSlider" parent="Root/CenterContainer/VBoxContainer/Effects"]
unique_name_in_owner = true
margin_left = 218.0
margin_right = 346.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 40 )
focus_neighbour_top = NodePath("../../Music/Music")
focus_neighbour_bottom = NodePath("../../Dialog/Dialog")
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 0.5
script = ExtResource( 4 )
audio_effect = ExtResource( 2 )
pitch = 2.25

[node name="Dialog" type="HBoxContainer" parent="Root/CenterContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 346.0
margin_bottom = 208.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="Root/CenterContainer/VBoxContainer/Dialog"]
margin_top = 8.0
margin_right = 202.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "Dialog Volume:"
align = 2

[node name="Dialog" type="HSlider" parent="Root/CenterContainer/VBoxContainer/Dialog"]
unique_name_in_owner = true
margin_left = 218.0
margin_right = 346.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 40 )
focus_neighbour_top = NodePath("../../Effects/Effects")
focus_neighbour_bottom = NodePath("../../Fullscreen/CenterContainer/Fullscreen")
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 0.5
script = ExtResource( 4 )
audio_effect = ExtResource( 2 )
pitch = 2.25

[node name="Fullscreen" type="HBoxContainer" parent="Root/CenterContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 346.0
margin_bottom = 257.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="Root/CenterContainer/VBoxContainer/Fullscreen"]
margin_top = 4.0
margin_right = 202.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "Fullscreen:"
align = 2

[node name="CenterContainer" type="CenterContainer" parent="Root/CenterContainer/VBoxContainer/Fullscreen"]
margin_left = 218.0
margin_right = 346.0
margin_bottom = 33.0
rect_min_size = Vector2( 128, 0 )

[node name="Fullscreen" type="CheckBox" parent="Root/CenterContainer/VBoxContainer/Fullscreen/CenterContainer"]
unique_name_in_owner = true
margin_left = 48.0
margin_right = 80.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
focus_neighbour_top = NodePath("../../../Dialog/Dialog")
focus_neighbour_bottom = NodePath("../../../Buttons/Back")
align = 1
icon_align = 1
script = ExtResource( 3 )
audio_effect = ExtResource( 2 )
hover_pitch = 10000.0
unhover_pitch = 10000.0
press_pitch = 3.0

[node name="Buttons" type="HBoxContainer" parent="Root/CenterContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 346.0
margin_bottom = 313.0
custom_constants/separation = 16

[node name="Back" type="Button" parent="Root/CenterContainer/VBoxContainer/Buttons"]
margin_left = 45.0
margin_right = 301.0
margin_bottom = 40.0
rect_min_size = Vector2( 256, 40 )
focus_neighbour_top = NodePath("../../Fullscreen/CenterContainer/Fullscreen")
focus_neighbour_bottom = NodePath("../../Master/Master")
size_flags_horizontal = 6
text = "Back"
script = ExtResource( 3 )
audio_effect = ExtResource( 2 )
hover_pitch = 1.5
unhover_pitch = 2.0
press_pitch = 3.0

[connection signal="value_changed" from="Root/CenterContainer/VBoxContainer/Master/Master" to="." method="_on_master_changed"]
[connection signal="value_changed" from="Root/CenterContainer/VBoxContainer/Music/Music" to="." method="_on_music_changed"]
[connection signal="value_changed" from="Root/CenterContainer/VBoxContainer/Effects/Effects" to="." method="_on_effects_changed"]
[connection signal="value_changed" from="Root/CenterContainer/VBoxContainer/Dialog/Dialog" to="." method="_on_dialog_changed"]
[connection signal="toggled" from="Root/CenterContainer/VBoxContainer/Fullscreen/CenterContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Root/CenterContainer/VBoxContainer/Buttons/Back" to="." method="_on_back_pressed"]
